src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__oid__cast_oid_to_string.snap
---
source: src/expr/src/scalar/func/impls/oid.rs
expression: "#[sqlfunc(\n    sqlname = \"oid_to_text\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastStringToOid)\n)]\nfn cast_oid_to_string(a: Oid) -> String {\n    let mut buf = String::new();\n    strconv::format_uint32(&mut buf, a.0);\n    buf\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastOidToString;
impl crate::func::EagerUnaryFunc for CastOidToString {
    type Input<'a> = Oid;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_oid_to_string(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastStringToOid)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastOidToString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("oid_to_text")
    }
}
fn cast_oid_to_string(a: Oid) -> String {
    let mut buf = String::new();
    strconv::format_uint32(&mut buf, a.0);
    buf
}
