src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__oid__mz_type_name.snap
---
source: src/expr/src/scalar/func/impls/oid.rs
expression: "#[sqlfunc()]\nfn mz_type_name(oid: Oid) -> Option<String> {\n    if let Ok(t) = Type::from_oid(oid.0) { Some(t.name().to_string()) } else { None }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct MzTypeName;
impl crate::func::EagerUnaryFunc for MzTypeName {
    type Input<'a> = Oid;
    type Output<'a> = Option<String>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        mz_type_name(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for MzTypeName {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(mz_type_name))
    }
}
fn mz_type_name(oid: Oid) -> Option<String> {
    if let Ok(t) = Type::from_oid(oid.0) { Some(t.name().to_string()) } else { None }
}
